--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.50.1",
-    "@types/node": "^22.13.0"
+    "@types/node": "^22.13.0",
+    "allure-playwright": "^3.1.0"
+  },
+  "dependencies": {
+    "axios": "^1.7.9"
   }
 }
