--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ node_modules/
 /playwright-report/
 /blob-report/
 /playwright/.cache/
+allure-report
+allure-results
+tests/snapshots
+tests/visual-compare.spec.ts-snapshots
